[package]
name = "sleep-interactive"
version = "1.0.1"
edition = "2021"
description = "A sleep like cli application that features a progress indicator and more meaningfull argument names"
license = "MIT"
repository = "https://github.com/Mike-Neto/sleep-interactive"
keywords = ["sleep", "progress"]
categories = ["command-line-utilities"]
readme = "README.MD"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
indicatif = "0.17.9"
